correct overflow

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -395,7 +395,7 @@ p-carousel-dot-icon {
   .first-row-one {
     display: flex !important;
     flex-direction: column-reverse;
-    margin-top: 8em !important;
+    // margin-top: 8em !important;
     div p{
       font-size: 13px !important;
       // font-weight: 400 !important;
